--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-config-awesome-bashrc (0.2) UNRELEASED; urgency=low
+config-awesome-bashrc (0.2) unstable; urgency=low
 
   * fix for postinst(" replaced with ')
 
