--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+config-awesome-bashrc (0.4) UNRELEASED; urgency=low
+
+  * bashrc prompt updated
+
+ -- Igor Shishkin <me@teran.ru>  Fri, 27 Sep 2013 01:16:39 +0400
+
 config-awesome-bashrc (0.3) unstable; urgency=low
 
   * colored prompt
